# blazegraph-io

./: .gitignore  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  docker-compose.yml
.github/workflows/: release.yml
blazegraph-cli/: Cargo.toml  README.md  build.rs
blazegraph-cli/configs/processing/: README.md  config.yaml
blazegraph-cli/src/: jre_manager.rs  lib.rs  main.rs
blazegraph-core/: Cargo.toml  README.md
blazegraph-core/src/: cache.rs  classifier.rs  config.rs  lib.rs  processor.rs  storage.rs  types.rs
blazegraph-core/src/graphs/: analytics.rs  builder.rs  graph.rs  mod.rs  serialization.rs
blazegraph-core/src/preprocessors/: mod.rs  preprocessor.rs  traits.rs
blazegraph-core/src/preprocessors/pdf/: mod.rs  xhtml_parser.rs
blazegraph-core/src/preprocessors/pdf/backends/: jni.rs  mod.rs
blazegraph-core/src/rules/: engine.rs  list_detection.rs  mod.rs  pattern_detection.rs  section_detection.rs  size_enforcer.rs  spatial_clustering.rs  validation.rs
blazegraph-core/test_fixtures/: README.md
blazegraph-core/test_fixtures/snapshots/claude_shannon_paper/: stage1a_xhtml.html  stage1b_text_elements.json  stage2_parsed_elements.json  stage3_graph.json  summary.json
blazegraph-core/test_fixtures/snapshots/elements_of_euclid/: stage1a_xhtml.html  stage2_parsed_elements.json  stage3_graph.json  summary.json
blazegraph-core/tests/: pipeline_tests.rs
blazegraph-python/: .gitignore  README.md  pyproject.toml
blazegraph-python/src/blazegraphio/: __init__.py  _config.py  _download.py  client.py  errors.py  local.py  types.py
blazegraph-python/tests/: conftest.py  test_client.py  test_download.py  test_local.py  test_render.py  test_types.py
docs/guides/: 01-quickstart.md  02-python-sdk.md  03-docker.md
docs/reference/: 02-schema-reference.md  03-config-reference.md
server/: main.py
