[package]
name = "blazegraph-io"
version = "0.1.0"
edition = "2021"
description = "Parse PDFs into semantic document graphs with bounding boxes. Built for GraphRAG."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/AmplifyTechnology/blazegraph-io"
homepage = "https://blazegraph.io"
keywords = ["pdf", "document", "graph", "rag", "parsing"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "blazegraph-io"
path = "src/main.rs"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# JRE auto-download (for JNI backend)
ureq = "2.9"            # Simple blocking HTTP client
flate2 = "1.0"          # gzip decompression
tar = "0.4"             # tar extraction
zip = "0.6"             # Windows zip extraction  
dirs = "5.0"            # Cross-platform data directories

# Core processing library - default to JNI backend
blazegraph-io-core = { version = "0.1.0", path = "../blazegraph-core", package = "blazegraph-io-core", default-features = false }

[features]
default = ["jni-backend"]
# Use JNI backend (cross-platform, requires JRE - auto-downloaded if missing)
jni-backend = ["blazegraph-io-core/jni-backend"]
